--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ langchain = "^0.3.1"
 langchain-community = "^0.3.1"
 llama-index-embeddings-huggingface = "^0.3.1"
 ipywidgets = "^8.1.5"
+fastapi = "^0.115.0"
+protobuf = "3.20.0"
+uvicorn = "^0.31.0"
 
 
 [tool.poetry.group.dev.dependencies]
